# tensor_classification

./: .gitignore  .travis.yml  LICENSE  README.md
code/: plot_comparisons.m  run_comparisons.m
code/helpers/: get_config.m  get_dgtda_auc.m  get_vectorised_lda_auc.m  heuristic_project_predict.m  manifold_project_predict.m  parafac_decompose.m  project_and_predict.m  tucker_decompose.m
code/simulation/: simulate_data.m
code/tensor_classification/: DGTDA.m  HODA.m  bilinear_logreg_tucker.m  classbased_differences.m  getPermMatvecA2vecAt.m  tensor_projection.m  tensorsldaobj_matrixdata.m
matlab/: README.md  colsandlinestyles.m
matlab/code/: plot_comparisons.m  run_comparisons.m  script_to_run_tests.m
matlab/code/helpers/: bilinear_get_predictions.m  cell_array_to_nd_array.m  classwise_scalar_multiply.m  decompose_predict.m  direct_predict.m  get_config.m  get_diagonal_indices.m  get_level_wise_diag_inds.m  get_mode_specific_scatter_matrix.m  get_sizes.m  (+7 more)
python/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python/code/classificationmethods/: ManifoldDiscrimantAnalysisParafacTucker.py
python/code/test/: manifold_discriminant.py  test_manifold_discriminant.py
python/tensor_classification/: ManifoldMethods.py  ModeAlternatingMethods.py
python/tensor_classification/classificationmethods/: ManifoldDiscrimantAnalysisParafacTucker.py
python/tensor_classification/helpers/: class_based.py
python/tensor_classification/test/: manifold_discriminant.py  test_manifold_discriminant.py
python/tests/: test_manifold_discriminant.py
(+26 files in other folders)
