[tool.poetry]
name = "tensor_classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
pymanopt = "^0.2.5"
numpy = "^1.18.1"
keras = "^2.3.1"
tensorflow = "^2.1.0"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
jupyter = "^1.0.0"
jupyterlab = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
